# tinyvk

./: .gitignore  CMakeLists.txt
modules/: tinyvk.cmake
src/: tinystd_algorithm.h  tinystd_assert.cpp  tinystd_assert.h  tinystd_bitset.h  tinystd_config.h  tinystd_span.h  tinystd_stack_allocator.h  tinystd_stack_vector.h  tinystd_stdlib.cpp  tinystd_stdlib.h  tinystd_string.h  tinystd_traits.h  tinyvk_backend.cpp  tinyvk_buffer.h  tinyvk_command.h  tinyvk_core.h  tinyvk_descriptor.h  tinyvk_device.h  tinyvk_fwd.h  tinyvk_image.h  tinyvk_pipeline.h  tinyvk_pipeline_cache.h  tinyvk_queue.h  tinyvk_renderpass.h  tinyvk_shader.cpp  tinyvk_shader.h  tinyvk_swapchain.h  vk_mem_alloc.cpp  vk_mem_alloc.h
tests/: CMakeLists.txt  scratch.cpp  test_backend_descriptor.cpp  test_backend_renderpass.cpp  test_device.cpp  test_shader.cpp  tests.cpp
